--- a/style.css
+++ b/style.css
@@ -4,3 +4,13 @@ h1 {
     font-size: large+50rem;
     color: blue;
 }
+
+.video-container {
+    text-align: center;
+}
+
+.video-container iframe {
+    max-width: 560px; /* Defina a largura máxima conforme necessário */
+    width: 100%;
+    height: 315px; /* Mantenha a proporção do vídeo */
+}
